Update to include disabledPaymentMethods in template and new application sources
