# lib/Api/Model/CheckoutTemplateUpdateInput.php
@@ -61,6 +61,7 @@ class CheckoutTemplateUpdateInput implements ModelInterface, ArrayAccess, \JsonS
     protected static $openAPITypes = [
         'amount_type' => '\Rvvup\Api\Model\CheckoutAmountType',
         'customer_fields' => '\Rvvup\Api\Model\CheckoutCustomerFieldsUpdateInput',
+        'disabled_payment_methods' => '\Rvvup\Api\Model\PaymentMethod[]',
         'enabled_payment_methods' => '\Rvvup\Api\Model\PaymentMethod[]',
         'name' => 'string',
         'notify_customer' => 'bool',
@@ -79,6 +80,7 @@ class CheckoutTemplateUpdateInput implements ModelInterface, ArrayAccess, \JsonS
     protected static $openAPIFormats = [
         'amount_type' => null,
         'customer_fields' => null,
+        'disabled_payment_methods' => null,
         'enabled_payment_methods' => null,
         'name' => null,
         'notify_customer' => null,
@@ -95,6 +97,7 @@ class CheckoutTemplateUpdateInput implements ModelInterface, ArrayAccess, \JsonS
     protected static array $openAPINullables = [
         'amount_type' => false,
         'customer_fields' => false,
+        'disabled_payment_methods' => false,
         'enabled_payment_methods' => false,
         'name' => false,
         'notify_customer' => false,
@@ -191,6 +194,7 @@ class CheckoutTemplateUpdateInput implements ModelInterface, ArrayAccess, \JsonS
     protected static $attributeMap = [
         'amount_type' => 'amountType',
         'customer_fields' => 'customerFields',
+        'disabled_payment_methods' => 'disabledPaymentMethods',
         'enabled_payment_methods' => 'enabledPaymentMethods',
         'name' => 'name',
         'notify_customer' => 'notifyCustomer',
@@ -207,6 +211,7 @@ class CheckoutTemplateUpdateInput implements ModelInterface, ArrayAccess, \JsonS
     protected static $setters = [
         'amount_type' => 'setAmountType',
         'customer_fields' => 'setCustomerFields',
+        'disabled_payment_methods' => 'setDisabledPaymentMethods',
         'enabled_payment_methods' => 'setEnabledPaymentMethods',
         'name' => 'setName',
         'notify_customer' => 'setNotifyCustomer',
@@ -223,6 +228,7 @@ class CheckoutTemplateUpdateInput implements ModelInterface, ArrayAccess, \JsonS
     protected static $getters = [
         'amount_type' => 'getAmountType',
         'customer_fields' => 'getCustomerFields',
+        'disabled_payment_methods' => 'getDisabledPaymentMethods',
         'enabled_payment_methods' => 'getEnabledPaymentMethods',
         'name' => 'getName',
         'notify_customer' => 'getNotifyCustomer',
@@ -278,6 +284,18 @@ class CheckoutTemplateUpdateInput implements ModelInterface, ArrayAccess, \JsonS
      *
      * @return string[]
      */
+    public function getDisabledPaymentMethodsAllowableValues()
+    {
+        return [
+            
+        ];
+    }
+
+    /**
+     * Gets allowable values of the enum
+     *
+     * @return string[]
+     */
     public function getEnabledPaymentMethodsAllowableValues()
     {
         return [
@@ -302,6 +320,7 @@ class CheckoutTemplateUpdateInput implements ModelInterface, ArrayAccess, \JsonS
     {
         $this->setIfExists('amount_type', $data ?? [], null);
         $this->setIfExists('customer_fields', $data ?? [], null);
+        $this->setIfExists('disabled_payment_methods', $data ?? [], null);
         $this->setIfExists('enabled_payment_methods', $data ?? [], null);
         $this->setIfExists('name', $data ?? [], null);
         $this->setIfExists('notify_customer', $data ?? [], false);
@@ -415,6 +434,44 @@ class CheckoutTemplateUpdateInput implements ModelInterface, ArrayAccess, \JsonS
     }
 
     /**
+     * Gets disabled_payment_methods
+     *
+     * @return \Rvvup\Api\Model\PaymentMethod[]|null
+     */
+    public function getDisabledPaymentMethods()
+    {
+        return $this->container['disabled_payment_methods'];
+    }
+
+    /**
+     * Sets disabled_payment_methods
+     *
+     * @param \Rvvup\Api\Model\PaymentMethod[]|null $disabled_payment_methods The set of payment methods that are disabled for the checkout.
+     *
+     * @return self
+     */
+    public function setDisabledPaymentMethods($disabled_payment_methods)
+    {
+        if (is_null($disabled_payment_methods)) {
+            throw new \InvalidArgumentException('non-nullable disabled_payment_methods cannot be null');
+        }
+        $allowedValues = $this->getDisabledPaymentMethodsAllowableValues();
+        if (array_diff($disabled_payment_methods, $allowedValues)) {
+            throw new \InvalidArgumentException(
+                sprintf(
+                    "Invalid value for 'disabled_payment_methods', must be one of '%s'",
+                    implode("', '", $allowedValues)
+                )
+            );
+        }
+
+
+        $this->container['disabled_payment_methods'] = $disabled_payment_methods;
+
+        return $this;
+    }
+
+    /**
      * Gets enabled_payment_methods
      *
      * @return \Rvvup\Api\Model\PaymentMethod[]|null
@@ -427,7 +484,7 @@ class CheckoutTemplateUpdateInput implements ModelInterface, ArrayAccess, \JsonS
     /**
      * Sets enabled_payment_methods
      *
-     * @param \Rvvup\Api\Model\PaymentMethod[]|null $enabled_payment_methods Ordered list of payment methods that are enabled for the checkout.
+     * @param \Rvvup\Api\Model\PaymentMethod[]|null $enabled_payment_methods Ordered list of payment methods that are enabled for the checkout. An empty list means all payment methods are enabled.
      *
      * @return self
      */
